# point-mass-lts

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp
src/config/: config.h  configHelper.cpp
src/simulation/: skidpad.cpp  skidpad.h
src/vehicle/: point-mass-vehicle.cpp  point-mass-vehicle.h  vehicle.cpp  vehicle.h  vehicleHelper.h
src/vehicle/aero/: aero.cpp  aero.h
src/vehicle/tire/: tire.h  tireSimple.cpp  tireSimple.h
